Changelog for HTML-Tree

{{$NEXT}}

    [TESTS]
    - Skip LWP::UserAgent tests if the version installed is too old

5.908    2014-05-17  Trial Release by Christopher J. Madsen

    [ENHANCEMENTS]
    - New as_lol & content_as_lol methods in HTML::Element
      (Ben Deutsch, GitHub #2)

    [FIXES]
    - as_XML inserted extra whitespace in comments (Tomaž Solc, RT #94311)

5.907    2013-09-13  Trial Release by Christopher J. Madsen

    [ENHANCEMENTS]
    - New content_as_HTML & content_as_XML methods in HTML::Element

5.906    2013-07-13  Trial Release by Christopher J. Madsen

    [DOCUMENTATION]
    - Explain that implicit_tags => 0 still returns implicit <html> (RT #86062)
    - typo fixes supplied by David Steinbrunner (GitHub #1)

    [TESTS]
    - Add implicit-tags-off.t

5.905    2013-06-29  Trial Release by Christopher J. Madsen

    [FIXES]
    - as_XML would not allow single-character attribute names (RT #86566)

5.904    2013-06-08  Trial Release by Christopher J. Madsen

    [FIXES]
    - as_text would infinite loop if it encountered undef (RT #83757)

5.903    2013-06-01  Trial Release by Christopher J. Madsen

    [ENHANCEMENTS]
    - $HTML::Element::default_encoding gets its default value from
      $ENV{PERL_HTML_TREE_ENCODING}, so you can restore the old behavior
      without modifying any code (just export PERL_HTML_TREE_ENCODING='').

5.902    2013-03-01  Trial Release by Christopher J. Madsen

    [DOCUMENTATION]
    - minor clarifications

    [TESTS]
    - Add dump.t

5.901    2012-12-22  Trial Release by Christopher J. Madsen

    [TESTS]
    - Fix encoding.t to work on Perl 5.8.9 and 5.10.0

5.900    2012-12-15  Trial Release by Christopher J. Madsen

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    - parse_file (and new_from_file) now try to determine the encoding
      automatically when given a filename (not a filehandle).  To restore
      the old behavior, set the new encoding attribute to the empty string.