@@ -9,20 +9,17 @@ BEGIN {
     use_ok('HTML::Element');
 }
 
-print "#Using HTML::TreeBuilder version v$HTML::TreeBuilder::VERSION\n";
-print "#Using HTML::Element version v$HTML::Element::VERSION\n";
-print "#Using HTML::Parser version v", $HTML::Parser::VERSION || "?", "\n";
-print "#Using HTML::Entities version v", $HTML::Entities::VERSION || "?",
-    "\n";
-print "#Using HTML::Tagset version v", $HTML::Tagset::VERSION || "?", "\n";
-print "# Running under perl version $] for $^O",
-    ( chr(65) eq 'A' ) ? "\n" : " in a non-ASCII world\n";
-print "# Win32::BuildNumber ", &Win32::BuildNumber(), "\n"
+diag "Running under perl version $] for $^O",
+    ( chr(65) eq 'A' ) ? "" : " in a non-ASCII world";
+diag "Using HTML::TreeBuilder version v$HTML::TreeBuilder::VERSION";
+diag "Using HTML::Element version v$HTML::Element::VERSION";
+diag "Using HTML::Parser version v", $HTML::Parser::VERSION || "?";
+diag "Using HTML::Entities version v", $HTML::Entities::VERSION || "?";
+diag "Using HTML::Tagset version v", $HTML::Tagset::VERSION || "?";
+diag "Win32::BuildNumber ", &Win32::BuildNumber()
     if defined(&Win32::BuildNumber)
         and defined &Win32::BuildNumber();
-print "# MacPerl verison $MacPerl::Version\n"
+diag "MacPerl verison $MacPerl::Version"
     if defined $MacPerl::Version;
-printf
-    "# Current time local: %s\n# Current time GMT:   %s\n",
-    scalar( localtime($^T) ), scalar( gmtime($^T) );
-print "# byebye from ", __FILE__, "\n";
+diag "Current time local: " . localtime($^T);
+diag "Current time GMT:   " . gmtime($^T);
