@@ -4,6 +4,7 @@ Changelog for HTML-Tree
 
     [TESTS]
     - Skip LWP::UserAgent tests if the version installed is too old
+    - Change 00system.t to use diag so the output is visible
 
 5.908    2014-05-17  Trial Release by Christopher J. Madsen
 
